Add Makkah TV and Madina TV pages, enhance navigation, and update internationalization support

--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -7,7 +7,9 @@
         "islamicCalender": "التقويم الإسلامي",
         "duas": "الأدعية",
         "aboutUs": "من نحن",
-        "contactUs": "اتصل بنا"
+        "contactUs": "اتصل بنا",
+        "makkahTv": "تلفزيون مكة",
+        "madinaTv": "تلفزيون المدينة المنورة"
     },
     "banner": {
         "title": "مرحبًا بكم في جلوبال صلاح",
@@ -252,6 +254,7 @@
         "tomorrow": "غدًا",
         "monthly": "شهري",
         "monthlynamaztitle": "مواقيت الصلاة الشهرية",
+        "hijridate":"التاريخ الهجري",
         "currentdate": "التاريخ الحالي",
         "date": "التاريخ",
         "namazfajr": "فجر",
@@ -666,5 +669,21 @@
       "sub-heading":"هل لديك أسئلة إضافية؟",
       "sub-paragraph":"لا تتردد في إرسال بريد إلكتروني إلينا وسنرد عليك في أسرع وقت ممكن.",
       "buttontext":"راسلنا على"
-    }
+    },
+    "makkahtv":{
+        "mainheading":"تلفزيون مكة",
+        "mainparagraph":"اختبر رحلة روحانية مع البث المباشر من الحرم المكي الشريف - شاهده في الوقت الفعلي واشعر بالتواصل.",
+        "videotitle":"بث مباشر: المسجد الحرام",
+        "subheading":"نبذة عن البث",
+        "subparagraph":"يوفر هذا البث المباشر على مدار الساعة وطوال أيام الأسبوع للمشاهدين في جميع أنحاء العالم اتصالاً بالمسجد الحرام في مكة المكرمة، واستمتع بالأجواء الروحانية لأقدس موقع في الإسلام، وشاهد الطواف حول الكعبة، وانضم إلى الصلاة من أي مكان في العالم.",
+        "footertext":"يتم توفير هذا التيار لأغراض تعليمية وروحية."
+      },
+      "madinatv":{
+        "mainheading":"تلفزيون المدينة المنورة",
+        "mainparagraph":"استمتع برحلة روحانية مع البث المباشر من المسجد النبوي الشريف - شاهده في الوقت الفعلي واشعر بالتواصل.",
+        "videotitle":"بث مباشر: المسجد النبوي الشريف",
+        "subheading":"نبذة عن البث",
+        "subparagraph":"يربط هذا البث المباشر على مدار الساعة وطوال أيام الأسبوع المشاهدين في جميع أنحاء العالم بالمسجد النبوي في المدينة المنورة. انغمس في الأجواء الهادئة لثاني أقدس موقع في الإسلام، واشهد الصلوات واختبر السكينة الروحانية من أي مكان في العالم.",
+        "footertext":"يتم تقديم هذا المسار للتعلم والإثراء الروحي."
+      }
 }
