Sort cities in PrayerTimesTable, update navigation links, and enhance TermsContent layout with cards

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -573,15 +573,14 @@
     ]
   },
   "aboutus": {
-    "title": "About Global Salah",
-    "desc": "Connecting hearts through prayer, transcending borders with faith.",
+    "title": "About us",
+    "desc": "Global Salah was founded by a Muslim and dedicated team which provides accurate Islamic information to their customers. Our team has experts, Alims, Muftees, and Quran Hafiz, who work together devotedly to deliver reliable information.",
     "mission": "Our Mission",
-    "globaltitle": "Global Reach",
-    "globaldesc": "Connecting Muslims worldwide",
-    "communitytitle": "Community",
-    "communitydesc": "Fostering a sense of belonging",
-    "spiritualtitle": "Spiritual Growth",
-    "spiritualdesc": "Encouraging regular prayer",
+    "missionparagraph":"At Global Salah, our mission is to guide Muslims in Islamic essentials. We help Muslims honestly to connect with religious instructions, no matter where they are in the world.  Our website is authentic and easy to use.",
+    "coretitle": "Our Core Values",
+    "coredesc": "We are guided by authenticity, reliability, respect and revolutions. Our website aims to provide more organized and trustworthy information such as qibla direction, namaz prayer and other essentials. We sincerely respect the diversity of Muslims globally and try to develop innovations gradually. ",
+    "visiontitle": "Our Visions",
+    "visiondesc": "Global Salah will likely provide you with more enhanced and updated Islamic information. We will stay more focused on Islamic teachings and deliver good deeds practice with proper references.",
     "benefittitle": "Benefits of Prayer",
     "spiritualconnectiontitle": "Spiritual Connection",
     "spiritualconnectiondesc": "Strengthens your relationship with Allah",
@@ -622,39 +621,35 @@
   },
   "terms": {
     "title": "Terms and Conditions",
-    "subheading_1": "1. Acceptance of Terms",
-    "subparagraph_1": "By accessing and using Global Salah, you accept and agree to be bound by the terms and provision of this agreement.",
-    "subheading_2": "2. Use of the Service",
-    "subparagraph_2": "You agree to use Global Salah only for purposes that are permitted by these Terms and any applicable law, regulation, or generally accepted practices or guidelines in the relevant jurisdictions.",
-    "subheading_3": "3. User Account",
-    "subparagraph_3": "To access some features of Global Salah, you may be required to create an account. You are responsible for maintaining the confidentiality of your account and password.",
-    "subheading_4": "4. Content",
-    "subparagraph_4": "Our Service allows you to post, link, store, share and otherwise make available certain information, text, graphics, videos, or other material. You are responsible for the content that you post to the Service.",
-    "subheading_5": "5. Intellectual Property",
-    "subparagraph_5": "The Service and its original content, features, and functionality are and will remain the exclusive property of Global Salah and its licensors.",
-    "subheading_6": "6. Termination",
-    "subparagraph_6": "We may terminate or suspend your account and bar access to the Service immediately, without prior notice or liability, under our sole discretion, for any reason whatsoever and without limitation.",
-    "subheading_7": "7. Changes to Terms",
-    "subparagraph_7": " We reserve the right, at our sole discretion, to modify or replace these Terms at any time. What constitutes a material change will be determined at our sole discretion.",
-    "subheading_8": "8. Contact Us",
-    "subparagraph_8": " If you have any questions about these Terms, please contact us at terms@globalsalah.com."
+    "lastupdated":"Last updated: March 18, 2025",
+    "subheading_1": "Welcome to Global Salah",
+    "subtext_1":"Please read these terms carefully before using our service",
+    "subparagraph_1": " You are warmly welcome at Global Salah! By accessing our international service, you must agree to terms and conditions that make a respectful community. You can use the Global Salah service with responsibility only to get the Islamic information that is consent to some applicable laws, rules and guidelines.",
+    "subparagraph_2": " Accessible customers are responsible for maintaining privacy; we allow you to share your thoughts, so you have to post relevant content in a respected way. Because users are responsible for the content they share on their profile. Global Salah has the right to eliminate your access if needed! If changes are made in the terms and conditions policy. We will update you thoroughly.",
+    "subheading_3": "Where Will These Terms and Conditions Be Used?",
+    "subparagraph_3": " These terms and conditions mentioned above will apply to all Global Salah users. They have to follow it respectively. You can use our services easily on any device, regardless of your data or location. Customers have to read these terms and conditions carefully.",
+    "subheading_4": "Privacy Notice",
+    "subparagraph_4": " Our privacy policy is relatively standard and straightforward, but Global Salah never shares, rents, or sells its customers' information and profiles.",
+    "subheading_5": "Disclaimer",
+    "subparagraph_5": " Welcome to Global Salah! Our website provides accurate updates regarding Islamic prayer time, Ahadith, Ayat,Duas, and other Islamic information. We helped many Muslims globally to stay connected with their Islamic practices on time. You can smoothly access our Global Salah update from anywhere.",
+    "footertext": "If you have any questions about these Terms and Conditions, please contact us."
   },
   "privacy": {
     "title": "Privacy Policy",
-    "subheading_1": "1. Information We Collect",
-    "subparagraph_1": "We collect information you provide directly to us, such as when you create or modify your account, request services, contact customer support, or otherwise communicate with us.",
-    "subheading_2": "2. How We Use Your Information",
-    "subparagraph_2": "We use the information we collect to provide, maintain, and improve our services, such as to process and complete your prayer requests, and communicate with you.",
-    "subheading_3": "3. Information Sharing and Disclosure",
-    "subparagraph_3": "We may share the information we collect with third parties for various purposes, including to: comply with laws; respond to lawful requests and legal process; protect the rights and property of Global Salah, our agents, customers, and others.",
-    "subheading_4": "4. Security",
-    "subparagraph_4": " We take reasonable measures to help protect information about you from loss, theft, misuse and unauthorized access, disclosure, alteration and destruction.",
-    "subheading_5": "5. Your Choices",
-    "subparagraph_5": " You may update, correct or delete information about you at any time by logging into your online account or by contacting us. You may also opt out of receiving promotional communications from us by following the instructions in those messages.",
-    "subheading_6": "6. Changes to this Policy",
-    "subparagraph_6": "We may change this privacy policy from time to time. If we make changes, we will notify you by revising the date at the top of the policy and, in some cases, we may provide you with additional notice.",
-    "subheading_7": "7. Contact Us",
-    "subparagraph_7": " If you have any questions about this privacy policy, please contact us at: privacy@globalsalah.com."
+    "subheading_1": "Acquired Information",
+    "subparagraph_1": "You have to share your information directly with us. The information we gathered from you through customer query forms. Our purpose behind taking your information is to make your experience with us finer and flawless.",
+    "subheading_2": "Our Information Practices",
+    "subparagraph_2": "The information you share is only used to maintain and improve service quality and enhance your experience. Our website assures you that you can complete your needs regarding Islamic information or prayer requests. Stay connected so we can easily cater to your needs. ",
+    "subheading_3": "Data Disclosure ",
+    "subparagraph_3": "Your privacy is our priority. We ensure all your information is in safe hands. Our website never allows access to anyone. Here, your information is protected by strict laws and legal policies. No one can approach each other's data. ",
+    "subheading_4": "Information Security And Confidentiality",
+    "subparagraph_4": " All your information remains confidential and secure. We save your data by following monitored devices and protocols. When we are about to revise any data, you will be notified with notice",
+    "subheading_5": "Your Decisions And Choices",
+    "subparagraph_5": "Our website allows their customers to make changes to the data anytime. They can share, edit, and delete the information given. You have complete access to control your profile. However, customers are being guided by promotional communications and guidelines.",
+    "subheading_6": "Transitions In Policy",
+    "subparagraph_6": "We change our policies occasionally. You will be updated and get revised policy instructions if any changes are made. Transitions are essential for websites to work smoothly",
+    "subheading_7": "Contact Us ",
+    "subparagraph_7": "If you have queries regarding anything, we are here to answer you. You can contact us by email at support@globalsalah.com."
   },
   "country": {
     "title": "Prayer Times For Cities in",
