--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -573,15 +573,14 @@
     ]
   },
   "aboutus": {
-    "title": "À propos de Global Salah",
-    "desc": "Relier les cœurs par la prière, transcender les frontières par la foi.",
-    "mission": "Notre Mission",
-    "globaltitle": "Portée Mondiale",
-    "globaldesc": "Relier les musulmans du monde entier",
-    "communitytitle": "Communauté",
-    "communitydesc": "Favoriser un sentiment d'appartenance",
-    "spiritualtitle": "Croissance Spirituelle",
-    "spiritualdesc": "Encourager la prière régulière",
+    "title": "A propos de nous",
+    "desc": "Global Salah a été fondé par une équipe musulmane et dévouée qui fournit des informations islamiques précises à ses clients. Notre équipe est composée d'experts, d'Alims, de Muftees et de Quran Hafiz, qui travaillent ensemble avec dévouement pour fournir des informations fiables.",
+    "mission": "Notre mission",
+    "missionparagraph":"À Global Salah, notre mission est de guider les musulmans dans les aspects essentiels de l'islam. Nous aidons les musulmans à se connecter honnêtement aux instructions religieuses, où qu'ils soient dans le monde.  Notre site web est authentique et facile à utiliser.",
+    "coretitle": "Nos valeurs fondamentales",
+    "coredesc": "Nous sommes guidés par l'authenticité, la fiabilité, le respect et les révolutions. Notre site Web vise à fournir des informations mieux organisées et plus fiables, telles que la direction de la qibla, la prière du namaz et d'autres éléments essentiels. Nous respectons sincèrement la diversité des musulmans dans le monde et essayons de développer progressivement des innovations. ",
+    "visiontitle": "Nos visions",
+    "visiondesc": "Global Salah vous fournira probablement plus d'informations islamiques améliorées et mises à jour. Nous nous concentrerons davantage sur les enseignements de l'Islam et sur la pratique des bonnes actions avec des références appropriées.",
     "benefittitle": "Bienfaits de la Prière",
     "spiritualconnectiontitle": "Connexion Spirituelle",
     "spiritualconnectiondesc": "Renforce votre relation avec Allah",
@@ -621,43 +620,39 @@
     "infophone": "Téléphone"
   },
 
-  "terms":{
-    "title":"Conditions générales d'utilisation",
-    "subheading_1":"1. Acceptation des conditions",
-    "subparagraph_1":"En accédant à Global Salah et en l'utilisant, vous acceptez d'être lié par les termes et dispositions de cet accord.",
-    "subheading_2":"2. Utilisation du service",
-    "subparagraph_2":"Vous acceptez de n'utiliser Global Salah qu'à des fins autorisées par les présentes conditions et par toute loi ou réglementation applicable, ou par des pratiques ou directives généralement acceptées dans les juridictions concernées.",
-    "subheading_3":"3. Compte d'utilisateur",
-    "subparagraph_3":"Pour accéder à certaines fonctions de Global Salah, il peut vous être demandé de créer un compte. Vous êtes responsable de la confidentialité de votre compte et de votre mot de passe.",
-    "subheading_4":"4. Contenu",
-    "subparagraph_4":"Notre service vous permet de publier, d'établir des liens, de stocker, de partager et de mettre à disposition certaines informations, textes, graphiques, vidéos ou autres matériels. Vous êtes responsable du contenu que vous publiez sur le service.",
-    "subheading_5":"5. Propriété intellectuelle",
-    "subparagraph_5":"Le Service et son contenu original, ses caractéristiques et ses fonctionnalités sont et resteront la propriété exclusive de Global Salah et de ses concédants de licence.",
-    "subheading_6":"6. Résiliation",
-    "subparagraph_6":"Nous pouvons résilier ou suspendre votre compte et interdire l'accès au service immédiatement, sans préavis ni responsabilité, à notre seule discrétion, pour quelque raison que ce soit et sans limitation.",
-    "subheading_7":"7. Modifications des conditions",
-    "subparagraph_7":" Nous nous réservons le droit, à notre seule discrétion, de modifier ou de remplacer les présentes conditions à tout moment. Ce qui constitue un changement important sera déterminé à notre seule discrétion.",
-    "subheading_8":"8. Nous contacter",
-    "subparagraph_8":"Si vous avez des questions concernant ces conditions, veuillez nous contacter à l'adresse suivante : terms@globalsalah.com."
-  },
-  "privacy":{
-    "title":"Politique de confidentialité",
-    "subheading_1":"1. Les informations que nous collectons",
-    "subparagraph_1":"Nous recueillons les informations que vous nous fournissez directement, par exemple lorsque vous créez ou modifiez votre compte, demandez des services, contactez le service clientèle ou communiquez avec nous de toute autre manière.",
+  "terms": {
+    "title": "Conditions générales d'utilisation",
+    "lastupdated": "Dernière mise à jour : 18 mars 2025",
+    "subheading_1": "Bienvenue à Global Salah",
+    "subtext_1": "Veuillez lire attentivement ces conditions avant d'utiliser notre service",
+    "subparagraph_1": " Vous êtes le bienvenu à Global Salah ! En accédant à notre service international, vous devez accepter les termes et conditions qui en font une communauté respectueuse. Vous pouvez utiliser le service Global Salah en toute responsabilité, uniquement pour obtenir des informations islamiques conformes aux lois, règles et directives en vigueur.",
+    "subparagraph_2": " Les clients accessibles sont responsables du respect de la vie privée ; nous vous permettons de partager vos pensées, vous devez donc publier des contenus pertinents dans le respect de la vie privée. Les utilisateurs sont responsables du contenu qu'ils partagent sur leur profil. Global Salah a le droit de supprimer votre accès si nécessaire ! Si des changements sont apportés aux conditions générales d'utilisation. Nous vous mettrons au courant.",
+    "subheading_3": "Où ces conditions seront-elles utilisées ?",
+    "subparagraph_3": " Les termes et conditions mentionnés ci-dessus s'appliquent à tous les utilisateurs de Global Salah. Ils doivent les respecter respectivement. Vous pouvez utiliser nos services facilement sur n'importe quel appareil, indépendamment de vos données ou de votre localisation. Les clients doivent lire attentivement ces conditions générales.",
+    "subheading_4": "Avis de confidentialité",
+    "subparagraph_4": " Notre politique de confidentialité est relativement standard et simple, mais Global Salah ne partage, ne loue ou ne vend jamais les informations et les profils de ses clients.",
+    "subheading_5": "Clause de non-responsabilité",
+    "subparagraph_5": " Bienvenue à Global Salah ! Notre site Web fournit des mises à jour précises concernant les heures de prières islamiques, les Ahadith, les Ayat, les Duas, et d'autres informations islamiques. Nous avons aidé de nombreux musulmans dans le monde entier à rester en contact avec leurs pratiques islamiques à temps. Vous pouvez accéder facilement à notre mise à jour de Global Salah depuis n'importe où.",
+    "footertext": "Si vous avez des questions concernant les présentes conditions générales, veuillez nous contacter."
+},
 
-    "subheading_2":"2. Comment nous utilisons vos informations",
-    "subparagraph_2":"Nous utilisons les informations que nous recueillons pour fournir, maintenir et améliorer nos services, par exemple pour traiter et compléter vos demandes de prières et pour communiquer avec vous.",
 
-    "subheading_3":"3. Partage et divulgation d'informations",
-    "subparagraph_3":"Nous pouvons partager les informations que nous recueillons avec des tiers à diverses fins, notamment pour : respecter les lois ; répondre à des demandes légales et à des procédures judiciaires ; protéger les droits et la propriété de Global Salah, de nos agents, de nos clients et d'autres personnes.",
-    "subheading_4":"4. La sécurité",
-    "subparagraph_4":" Nous prenons des mesures raisonnables pour protéger les informations vous concernant contre la perte, le vol, l'utilisation abusive et l'accès, la divulgation, l'altération et la destruction non autorisés.",
-    "subheading_5":"5. Vos choix",
-    "subparagraph_5":" Vous pouvez à tout moment mettre à jour, corriger ou supprimer les informations vous concernant en vous connectant à votre compte en ligne ou en nous contactant. Vous pouvez également refuser de recevoir des communications promotionnelles de notre part en suivant les instructions figurant dans ces messages.",
-    "subheading_6":"6. Modifications de la présente politique",
-    "subparagraph_6":"Nous pouvons modifier cette politique de confidentialité de temps à autre. Si nous apportons des modifications, nous vous en informerons en révisant la date figurant en tête de la politique et, dans certains cas, nous pourrons vous fournir un avis supplémentaire.",
-    "subheading_7":"7. Nous contacter",
-    "subparagraph_7":" Si vous avez des questions concernant cette politique de confidentialité, veuillez nous contacter à l'adresse suivante : privacy@globalsalah.com."
+  "privacy": {
+    "title": "Politique de confidentialité",
+    "subheading_1": "Informations acquises",
+    "subparagraph_1": "Vous devez partager vos informations directement avec nous. Les informations que nous avons recueillies auprès de vous par le biais des formulaires de demande de renseignements des clients. L'objectif de cette collecte d'informations est de rendre votre expérience avec nous plus agréable et sans faille.",
+    "subheading_2": "Nos pratiques en matière d'information",
+    "subparagraph_2": "Les informations que vous partagez ne sont utilisées que pour maintenir et améliorer la qualité du service et améliorer votre expérience. Notre site web vous assure que vous pouvez répondre à vos besoins en matière d'informations islamiques ou de demandes de prières. Restez connecté afin que nous puissions facilement répondre à vos besoins. ",
+    "subheading_3": "Divulgation des données ",
+    "subparagraph_3": "Votre vie privée est notre priorité. Nous veillons à ce que toutes vos informations soient entre de bonnes mains. Notre site web n'autorise jamais l'accès à qui que ce soit. Ici, vos informations sont protégées par des lois et des politiques juridiques strictes. Personne ne peut accéder aux données des autres. ",
+    "subheading_4": "Sécurité de l'information et confidentialité",
+    "subparagraph_4": " Toutes vos informations restent confidentielles et sécurisées. Nous sauvegardons vos données en suivant des dispositifs et des protocoles contrôlés. Lorsque nous sommes sur le point de réviser des données, nous vous en informons par un avis.",
+    "subheading_5": "Vos décisions et vos choix",
+    "subparagraph_5": "Notre site web permet à ses clients de modifier les données à tout moment. Ils peuvent partager, modifier et supprimer les informations fournies. Vous avez un accès complet au contrôle de votre profil. Toutefois, les clients sont guidés par des communications promotionnelles et des lignes directrices.",
+    "subheading_6": "Transitions dans la politique",
+    "subparagraph_6": "Nous modifions occasionnellement nos politiques. Vous serez informé et recevrez des instructions révisées en cas de changement. Les transitions sont essentielles au bon fonctionnement des sites web",
+    "subheading_7": "Nous contacter ",
+    "subparagraph_7": "Si vous avez des questions concernant quoi que ce soit, nous sommes là pour vous répondre. Vous pouvez nous contacter par courrier électronique à l'adresse support@globalsalah.com."
   },
   "country":{
     "title":"Heures de prière pour les villes en",
