Add Ramadan Calendar and 99 Names of Allah pages, enhance navigation, and update localization support

--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -9,7 +9,9 @@
         "aboutUs": "من نحن",
         "contactUs": "اتصل بنا",
         "makkahTv": "تلفزيون مكة",
-        "madinaTv": "تلفزيون المدينة المنورة"
+        "madinaTv": "تلفزيون المدينة المنورة",
+        "ramadan": "تقويم رمضان",
+        "namesallah":"99 اسمًا من أسماء الله الحسنى"
     },
     "banner": {
         "title": "مرحبًا بكم في جلوبال صلاح",
@@ -699,6 +701,23 @@
         "subheading": "نبذة عن البث",
         "subparagraph": "يربط هذا البث المباشر على مدار الساعة وطوال أيام الأسبوع المشاهدين في جميع أنحاء العالم بالمسجد النبوي في المدينة المنورة. انغمس في الأجواء الهادئة لثاني أقدس موقع في الإسلام، واشهد الصلوات واختبر السكينة الروحانية من أي مكان في العالم.",
         "footertext": "يتم تقديم هذا المسار للتعلم والإثراء الروحي."
-    }
+    },
+
+    "ramadanpage":{
+        "hijri":"١٤٤٦ هجري",
+        "heading":"تقويم رمضان ٢٠٢٥",
+        "suhoor":"السحور (الفجر)",
+        "iftar":"الإفطار (المغرب)",
+        "suhoorends":"انتهاء السحور",
+        "iftartime":"وقت الإفطار",
+        "footertext":"ينتهي السحور في وقت الفجر - يبدأ الإفطار في وقت المغرب"
+      },
+
+
+      "namesofallah":{
+        "heading":"أسماء الله الحسنى ال 99",
+        "paragraph":"أسماء الله الحسنى - أسماء الله الحسنى مع المعاني واللفظ",
+        "subparagraph":" تعكس أسماء الله الحسنى الـ 99 رحمته وحكمته وعظمته. يحمل كل اسم منها معنى خاصًا، ويوجه المؤمنين نحو الإيمان والسلام الداخلي."
+      }
 
 }
