Add forum and notifications pages, enhance localization support, and introduce new UI components

--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -11,7 +11,8 @@
         "makkahTv": "تلفزيون مكة",
         "madinaTv": "تلفزيون المدينة المنورة",
         "ramadan": "تقويم رمضان",
-        "namesallah":"99 اسمًا من أسماء الله الحسنى"
+        "namesallah":"99 اسمًا من أسماء الله الحسنى",
+        "forum":"المنتدى"
     },
     "banner": {
         "title": "مرحبًا بكم في جلوبال صلاح",
