--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -11,7 +11,8 @@
     "makkahTv": "Makkah Tv",
     "madinaTv": "Madina Tv",
     "ramadan": "Calendrier du Ramadan",
-    "namesallah":"99 noms d'Allah"
+    "namesallah":"99 noms d'Allah",
+    "forum":"Forum"
   },
   "banner": {
     "title": "Bienvenue sur Global Salah",
