Enhance localization support by adding French and Arabic translations for forum, calendar, and live TV. Update notification links to point to the forum.

--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -12,7 +12,9 @@
         "madinaTv": "تلفزيون المدينة المنورة",
         "ramadan": "تقويم رمضان",
         "namesallah":"99 اسمًا من أسماء الله الحسنى",
-        "forum":"المنتدى"
+        "forum":"المنتدى",
+        "calender":"التقويم",
+        "livetv":"البث التلفزيوني المباشر"
     },
     "banner": {
         "title": "مرحبًا بكم في جلوبال صلاح",
