Add blog feature; include blog listing and details pages, update navigation, and integrate blog API

--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -14,7 +14,8 @@
         "namesallah":"99 اسمًا من أسماء الله الحسنى",
         "forum":"المنتدى",
         "calender":"التقويم",
-        "livetv":"البث التلفزيوني المباشر"
+        "livetv":"البث التلفزيوني المباشر",
+        "blogs":"المدونات"
     },
     "banner": {
         "title": "مرحبًا بكم في جلوبال صلاح",
