--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -14,7 +14,8 @@
     "namesallah":"99 Names Of Allah",
     "calender":"Calender",
     "livetv":"Live TV",
-    "forum":"Forum"
+    "forum":"Forum",
+    "blogs":"Blogs"
   },
   "banner": {
     "title": "Welcome to Global Salah",
