--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -14,7 +14,8 @@
     "namesallah":"99 noms d'Allah",
     "forum":"Forum",
     "calender":"Calendrier",
-    "livetv":"Télévision en direct"
+    "livetv":"Télévision en direct",
+    "blogs":"Blogs"
   },
   "banner": {
     "title": "Bienvenue sur Global Salah",
