Refactor blog and notification services; update blog URLs and enhance notification deletion functionality

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -308,8 +308,8 @@
     "footertitle": "Global Salah",
     "footerdesc": "Global Salah is a website dedicated to providing accurate and convenient Islamic prayer time information to Muslims around the world.",
     "quicklinkstitle": "Quick links",
-    "companytitle": "Company",
-    "otherlinktitle": "Other",
+    "companytitle": "Quick links",
+    "otherlinktitle": "Policies",
     "termslink": "Terms and conditions",
     "privacylink": "Privacy policy",
     "rightsdesc": "All Rights Reserved © 2025 Global Salah"
